fix: update active link background color for improved contrast

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@
 
 .sidebar nav[role="doc-toc"] a.active,
 .sidebar #TOC a.active {
-  background-color: #80808036;
+  background-color: #8080801f;
   border-radius: 4px;
 }
 
